spring缓存，activemq管理缓存，rsa签名验签

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,6 +25,12 @@ ext {
             hazelcast   :[
                     'com.hazelcast:hazelcast:3.8.6',
                     'com.hazelcast:hazelcast-spring:3.8.6',
+            ],
+            activemq:   [
+                    "org.springframework.boot:spring-boot-starter-activemq:${versions.springBootVersion}",
+            ],
+            rsa:    [
+                   'commons-codec:commons-codec:1.8' 
             ]
     ]
 }
